<resources>
    <string name="app_name">SignIn Module</string>
    <string name="signInError">SignIn Error</string>
    <string name="extraHeading">Just a few extra details</string>
    <string name="extraHeadingAwesome">Awesomeness</string>
    <string name="extraHeadingAwesome2">just a step away</string>
    <string name="extramaking">Love in making…</string>
    <string name="verify">Verify</string>
    <string name="verified">Verified</string>
    <string name="retry">Retry</string>
    <string name="permission">We need a few permissions to continue…</string>
    <string name="grantpermission">Grant Permission</string>
    <string name="extraPhoneno">Phone no</string>
    <string name="veificationcode">Verification Code</string>
    <string name="imageContentInfo">image</string>
    <string name="imageContentError">imageError</string>
    <string name="logo">App Name</string>
    <string name="hello">Hello!</string>
    <string name="termsservice">Terms of our service</string>
    <string name="terms">By Continuing you agree to the terms and condition</string>
    <string name="termsawesome">Welcome ! you are just one step away from awesomeness, Accept our terms and condition to proceed</string>
    <string name="signin">Sign in using any one service</string>
    <string name="termsagree">By continuing  you  agree to all the <a href=''> Terms and Conditions</a></string>


    <!--SignInAttributes-->
    <string name="singInName">singname</string>
    <string name="singInEmail">singemail</string>
    <string name="singInPhone">singphone</string>
    <string name="signInStatus">singstatus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- -->

    <!-- BundleExtra-->
    <string name="bundleExtraRandom">bndlextrnd</string>
    <!-- -->
</resources>
