<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchParent"
    tools:context="com.nrs.nsnik.signinmodule.fragments.ExtraDetailsFragment">

    <LinearLayout
        style="@style/wrapContent"
        android:layout_centerInParent="true"
        android:padding="@dimen/sixteen"
        android:orientation="vertical">

    <TextView
        style="@style/wrapContent"
        android:textSize="36sp"
        android:padding="@dimen/eight"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/extraHeading"/>


        <android.support.design.widget.TextInputLayout
            style="@style/stretchedVertically"
            android:padding="@dimen/eight">

            <android.support.design.widget.TextInputEditText
                style="@style/stretchedVertically"
                android:id="@+id/extraPhoneNo"
                android:hint="@string/extraPhoneno"
                android:maxLength="10"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <Button
           style="@style/wrapContent"
            android:id="@+id/extraPhoneVerify"
            android:layout_gravity="center_horizontal"
            android:text="@string/verify"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:theme="@style/buttonColor"
            android:layout_margin="@dimen/sixteen"/>

    </LinearLayout>

</RelativeLayout>
